fix: fix alignment of items on eebyrtagh.html. style: gradient color game

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -11,3 +11,14 @@
 #p5{
     font-family: "Trade Winds";
 }
+
+#skudley h2{
+    font-family: "Indy";
+    background: -webkit-linear-gradient(#ffa202, #feff1f, #ffffff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+#skudley p{
+    font-family: "EEF";
+}
